<resources>

    <string name="_10_times">10 Times</string>
    <string name="_20_times">20 Times</string>
    <string name="_30_times">30 Times</string>
    <string name="_40_times">40 Times</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="abbreviation_for_this_shift">Abbreviation for this Shift</string>

    <string name="acceptAndContinue">Accept and Continue</string>
    <string name="add_as_second_shift">Add as second shift</string>
    <string name="add_shift">Add Shift</string>
    <string name="alarm_1">Alarm 1</string>
    <string name="alarm_2">Alarm 2</string>
    <string name="alarms">Alarms</string>
    <string name="amount">Amount</string>
    <string name="app_name">Personal Work Shift</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="background_color">Background color</string>
    <string name="backup">Backup and Restore</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="backups">BACKUP</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calculate_shift_time">Calculate shift Time</string>
    <string name="calendar_name">Calendar Name</string>
    <string name="calendars">Calendars</string>
    <string name="cancel">cancel</string>
    <string name="cancels">CANCEL</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="coin_symbol">coin Symbol</string>

    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="configuration">Settings</string>
    <string name="copy">Copy</string>
    <string name="count">Count</string>
    <string name="cut">Cut</string>
    <string name="date_format">Date format</string>
    <string name="default_sound">Default sound</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">Are you sure want to delete</string>
    <string name="dot">:</string>
    <string name="drive">Restore Drive Backups</string>
    <string name="drives">Drive</string>
    <string name="early_exit">Early Exit:</string>
    <string name="edit">Edit</string>
    <string name="end_time">End Time</string>
    <string name="ends_after_the_day">*Ends after the day</string>
    <string name="erase">Erase</string>
    <string name="erase_shift">Erase shift</string>
    <string name="erase_shift_1">Erase Shift 1</string>
    <string name="erase_shift_2">Erase Shift 2</string>
    <string name="exit_edit_mode">Exit Edit Mode</string>
    <string name="export_successfully">Export Successfully</string>
    <string name="extra_income">Extra income:</string>
    <string name="extra_time">Extra Time</string>
    <string name="extra_time2">Extra Time:</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_to_export">Failed to export</string>
    <string name="failed_to_import">Failed to import</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="from">From</string>
    <string name="from_to">From to</string>
    <string name="general">General</string>
    <string name="global">Sum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="holiday">Holiday</string>
    <string name="import_successfully">Import Successfully</string>
    <string name="incomes">Incomes</string>
    <string name="keep_existing_shifts">Keep existing shifts</string>
    <string name="local">Local Backups</string>
    <string name="locals">Local</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="noDataDescBackup">Please backup your data to restore</string>
    <string name="noDataTitleBackup">No backup found</string>
    <string name="note_s_remider_alarm_2">"Note's remider 2"</string>
    <string name="note_s_reminder_alarm_1">"Note's reminder 1"</string>
    <string name="ok">ok</string>
    <string name="paid_time">Paid time</string>
    <string name="paid_time_1">(Paid time)</string>
    <string name="paint">Paint</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="paste">Paste</string>

    <string name="per_extra_hour">%s per extra hour</string>
    <string name="per_hour">%s per hour</string>
    <string name="permissionDisclose">Permission Disclosure</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate us</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_suggestions">"Suggest us what went wrong and we'll work on it!"</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="rationale_export">We need access to your storage for export your data.</string>
    <string name="rationale_save">We need access to your storage for saving your affirmation.</string>
    <string name="repeat_selected_range">Repeat Selected Shift</string>
    <string name="rest_time_minutes">Rest Time (minutes)</string>
    <string name="restore">Restore data your local backups</string>
    <string name="restore_msg">What you like to do with current data Delete or Merge</string>
    <string name="sans_serif">sans-serif</string>
    <string name="schedule">Schedule</string>
    <string name="search_menu_title">Search</string>
    <string name="select_statistics_range">Select Date Range</string>
    <string name="set_shift">Set Shift</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_as_image">Share as image</string>
    <string name="share_as_text">Share as text</string>
    <string name="shift">Shift</string>
    <string name="shift_name">Shift Name</string>
    <string name="shift_time">Shift Time</string>
    <string name="split_shift">Split shift</string>
    <string name="start_time">Start Time</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="swap_shifts">Swap Shifts</string>
    <string name="take">Take Drive Backup</string>
    <string name="termsOfService">Terms Of Service</string>
    <string name="termsOfServiceSummery">This app is governed by Fit Tech’s Terms of Service. By continuing to use this app you represent that you have read and accept the Terms of Service, Privacy Policy and Permission disclosure.</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="text_color">Text color</string>
    <string name="text_size">Text Size</string>
    <string name="the_day_before">The day before</string>
    <string name="time">Time</string>
    <string name="time_and_incomes">Time and Incomes</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="to">To</string>
    <string name="visual">Visual</string>
    <string name="write_the_name_of_the_shift">Write the name of the Shift</string>
</resources>