<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffedecec">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/agreeAndContinue"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150.0dip"
            android:layout_height="150.0dip"
            android:layout_gravity="center_horizontal"
            android:padding="20.0dip"
            android:src="@drawable/privacy_policy1"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2.0dip"
                android:paddingBottom="2.0dip"
                android:text="@string/termsOfService"
                android:textColor="#ff1a73e8"
                android:textSize="22.0sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="6.0dip"
                android:text="@string/termsOfServiceSummery"
                android:textColor="@android:color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/termsOfService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingTop="4.0dip"
                android:paddingBottom="5.0dip"
                android:text="@string/termsOfService"
                android:textAllCaps="true"
                android:textColor="#ff1a73e8"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingTop="4.0dip"
                android:paddingBottom="5.0dip"
                android:text="@string/privacy_policy"
                android:textAllCaps="true"
                android:textColor="#ff1a73e8"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingTop="4.0dip"
                android:paddingBottom="4.0dip"
                android:text="@string/permissionDisclose"
                android:textAllCaps="true"
                android:textColor="#ff1a73e8"
                android:textSize="16.0sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/agreeAndContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10.0dip"
        android:background="@drawable/bg_btn_cancel"

        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/acceptAndContinue"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />
</RelativeLayout>