<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_12sdp"
    android:layout_marginRight="@dimen/_12sdp"
    android:orientation="vertical"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="0.0dip"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:fontFamily="@font/semi_bold"
                android:gravity="center"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/delete"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/semi_bold"
                android:padding="@dimen/_4sdp"
                android:text="@string/are_you_sure_you_want_to_delete"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/llCancel"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_btn_cancel"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semi_bold"
                        android:text="@string/cancel"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDarkNavy"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llOk"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_ok"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/semi_bold"
                        android:text="@string/ok"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>