<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
>

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:gravity="center"
                android:padding="12.0dip"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/txtDec"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="4.0dip"
                android:maxLines="3"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4.0dip">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_btn_cancel"
                    android:text="@string/cancel"
                    android:textColor="@color/colorDarkGray" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_ok"
                    android:text="@string/ok"
                    android:textColor="?colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</layout>