<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <HorizontalScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/myHorizontalScrollViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <jutt.com.zcalenderview.ZCalenderView
                android:id="@+id/zCalendarViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:nestedScrollingEnabled="false"

                app:colorCurrentDayCircle="@color/colorRed"
                app:colorCurrentDayText="@android:color/white"
                app:colorMonthName="@color/colorGreen"

                app:drawRoundRect="false"
                app:headerMonthHeight="@dimen/_14sdp"
                app:selectedDayRadius="@dimen/_9sdp"
                app:textSizeDay="@dimen/_8sdp"
                app:textSizeDayName="@dimen/_8sdp"
                app:textSizeMonth="@dimen/_13sdp"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:id="@+id/rlStatistic"
                android:layout_width="@dimen/_315sdp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:background="@drawable/bg_layout"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/txtDate"
                        style="@style/statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bold"
                        android:gravity="center"
                        android:text="Statistics"
                        android:textColor="@color/colorDarkNavy"
                        android:textSize="@dimen/_12ssp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:orientation="horizontal"
                        android:weightSum="15.0">

                        <TextView
                            style="@style/statTitle"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="5.0"
                            android:gravity="center"
                            android:text="@string/shift" />

                        <TextView
                            style="@style/statTitle"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="2.0"
                            android:gravity="center"
                            android:text="@string/count" />

                        <TextView
                            style="@style/statTitle"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="3.0"
                            android:gravity="center"
                            android:text="@string/time" />

                        <TextView
                            style="@style/statTitle"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="5.0"
                            android:gravity="center"
                            android:text="@string/amount" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvStatisticsShift"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/sum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/global" />

                        <TextView
                            style="@style/sum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dot" />

                        <TextView
                            android:id="@+id/txtSumShiftTime"
                            style="@style/sumValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:text="0 Shift, 0h, 0m " />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/ExtraTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/extra_time" />

                        <TextView
                            style="@style/ExtraTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dot" />

                        <TextView
                            android:id="@+id/txtExtraTimePaid"
                            style="@style/sumValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:text="0h, 0m" />

                        <TextView
                            style="@style/ExtraTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:text="@string/paid_time_1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/ExtraTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/extra_time" />

                        <TextView
                            style="@style/ExtraTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dot" />

                        <TextView
                            android:id="@+id/txtExtraTime"
                            style="@style/sumValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:text="0h, 0m" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtTotal"
                        style="@style/value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</layout>